# log2kafka

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile.in  README.md  cmake_build.sh  cmake_install.cmake  cmake_run.sh  log2kafka-no-log4cxx.launch  log2kafka.launch
cmake/: FindApachePortableRuntime.cmake  FindAvro.cmake  FindAvroCPP.cmake  FindKafkaC.cmake  FindKafkaCPP.cmake  FindLog4CXX.cmake  FindSnappy.cmake
src/: CMakeLists.txt  ClientFacade.cc  ClientFacade.hh  ClientProxy.cc  ClientProxy.hh  Constants.cc  Constants.hh  Exceptions.hh  InvalidBrokerException.cc  InvalidMapperException.cc  Makefile  Mapper.cc  Mapper.hh  MapperMatchException.cc  ProducerCreationException.cc  Serializer.cc  Serializer.hh  Util.cc  Util.hh  cmake_install.cmake  config.hh.in  log2kafka.cc  log2kafka.hh  log2kafka.hh.in  log4cxx.properties  mainpage.dox
src/conf/: apache-combined.conf  config-sample.ini  log4cxx.properties  websphere.conf
src/schemas/: apache-combined.conf  apache.json  liferay.conf
